building UI template

--- a/views/base.pug
+++ b/views/base.pug
@@ -1,14 +1,19 @@
 doctype html 
 html 
     head 
-        title Natours | #{tour}
+        meta(charset='UTF-8')
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet' href='css/style.css')
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
+        link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+        title Natours | #{title}
 
     body 
-        h1= tour 
-        h2= user.toUpperCase() 
+        // Header
+        include _header
+        // Content
+        block content
+            h1 This is a placeholder head
 
-        - const x = 9;
-        h2= 2 * x
-        p This is just some text
+        // Footer
+        include _footer
