--- a/views/_reviewCard.pug
+++ b/views/_reviewCard.pug
@@ -1,8 +1,8 @@
 mixin reviewCard(review)
   .reviews__card
     .reviews__avatar
-      img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-      h6.reviews__user Jim Brown
+      img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt='Jim Brown')
+      h6.reviews__user= review.user.name
     p.reviews__text= review.review
     .reviews__rating
       each star in [1, 2, 3, 4, 5]
