--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,13 +1,6 @@
 extends base
 include _reviewCard
-
-mixin overviewBox(label, text, icon)
-  .overview-box__detail
-    svg.overview-box__icon
-      use(xlink:href=`/img/icons.svg#icon-${icon}`)
-    span.overview-box__label= label
-    span.overview-box__text= text
-
+include _overviewBox
 
 block content 
   section.section-header
@@ -63,7 +56,7 @@ block content
         img.picture-box__img(src=`/img/tours/${img}`, alt=`${tour.name} ${i + 1}`, class=`picture-box__img--${i + 1}` )
 
   section.section-map
-    #map
+    #location-list(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
